examples/test/testpolicy17277.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17277
  namespace: namespace157
spec:
  podSelector:
    matchLabels:
      key29: value36
      key28: value46
      key38: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value6
      podSelector:
        matchLabels:
          key29: value22
